2007-12-14  Akim Demaille  <demaille@gostai.com>

	Prefer enums to #define.
	* sysexits.hh: here.

2007-11-09  Akim Demaille  <demaille@gostai.com>

	Fix cpp guard.
	* sysexits.hh: here.

2007-11-09  Akim Demaille  <demaille@gostai.com>

	Install sysexits.hh.
	* Makefile.am: here.

2007-11-09  Akim Demaille  <demaille@gostai.com>

	libport/sysexits.h.
	* assert.hh: Space changes.
	* sysexits.hh: New.
	* unistd.h: Use LIBPORT_HAVE_*.

2007-10-30  Akim Demaille  <demaille@gostai.com>

	Fix package-info.
	* package-info.hh, package-info.cc (dump): Provide a default
	argument for sake of gdb.
	Fix the uses of "first".
	Fix output.
	(signature): New.
	Support Copyright stuff.

2007-10-30  Akim Demaille  <demaille@gostai.com>

	Cannot -- on bool.
	* package-info.cc: So use ++.

2007-10-30  Akim Demaille  <demaille@gostai.com>

	Rewrite PackageInfo.
	The current scheme, that tried to make several different implementation
	of a single ctor, does not work: in the end the linked keeps only
	one implementation, and all the package infos are the same...
	* package-info.hh, package-info.cc: Completely rewrite.
	* package-info.hcc: Remove.
	* Makefile.am: Adjust.

2007-10-26  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Properly use boost/cstdint.h.
	The typedefs that this header creates are in the `boost' namespace.
	* windows.hh (useconds_t): Use boost::uint32_t.

2007-10-23  mefyl  <mefyl@lrde.epita.fr>

	Use boost portable header for integers definitions.
	* windows.hh: Here.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Fwd decl PackageInfo.
	* fwd.hh: here.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Provide reference cases for all tests.
	* tests/test-deref.stdout: New.
	* tests/test-indent.stdout: New.
	* tests/test-separator.stdout: New.
	They are all empty.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Libport tests need Boost.
	* tests/Makefile.am (AM_CPPFLAGS): Pass BOOST_CPPFLAGS.

2007-10-23  Akim Demaille  <demaille@gostai.com>
